--- a/css/style.css
+++ b/css/style.css
@@ -5,3 +5,17 @@ html {
 body {
   font-family: "Open Sans", sans-serif;
 }
+
+.paragraph-Background {
+  color: black;
+  background-color: rgba(255, 255, 255, 0.65);
+  padding: 5px;
+}
+.imageBackground {
+  background-size: cover;
+  background-position: top;
+  min-height: 250px;
+  height: calc(100% + 20px);
+  padding: 10px;
+  box-sizing: border-box;
+}
