--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,8 @@ body {
 
 .paragraph-Background {
   color: black;
-  background-color: rgba(255, 255, 255, 0.65);
+  background-color: rgba(255, 255, 255, 0.75);
+  border-radius: 8px;
   padding: 5px;
 }
 .imageBackground {
